# fix-die-repeat

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml  renovate.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.pi/skills/prompt-introspect/: SKILL.md
.pi/skills/prompt-introspect/references/: categories.md  summary-format.md  template-budgets.md
docs/: guide.md  pi-bridge.md
fix_die_repeat/: __init__.py  bridge_install.py  cli.py  config.py  detection.py  lang.py  messages.py  notification_config.py  pi_bridge.py  prompts.py  runner.py  runner_artifacts.py  runner_improve_prompts.py  runner_introspection.py  runner_pr.py  runner_review.py  utils.py  wizard.py
fix_die_repeat/backends/: __init__.py  base.py  pi.py
fix_die_repeat/notifications/: __init__.py  base.py  manager.py  ntfy.py  zulip.py
fix_die_repeat/templates/: ask_clarifying_questions.j2  confidence_instructions.j2  contextual_review.j2  fix_checks.j2  full_codebase_review.j2  improve_prompts.j2  introspect_pr_review.j2  local_review.j2  pr_threads_header.j2  resolve_review_issues.j2
fix_die_repeat/templates/lang_checks/: csharp.j2  elixir.j2  javascript.j2  python.j2  rust.j2
fix_die_repeat/templates/partials/: _critical_checklist.j2  _issue_classification.j2  _language_checks.j2  _review_output_contract.j2  _review_readonly_task.j2  _review_reporting_rules.j2
priv/pi-bridge/: .gitignore  bridge.js  package-lock.json  package.json
scripts/: ci.sh  pre-commit-hook.sh  setup-dev.sh  validate_ruff_rules.py
tests/: __init__.py  conftest.py  test_bridge_install.py  test_cli.py  test_config.py  test_detection.py  test_introspection.py  test_lang.py  test_messages.py  test_notification_config.py  test_notifications.py  test_pi_bridge.py  test_prompts.py  test_runner.py  test_runner_artifacts.py  test_runner_improve_prompts.py  test_runner_improve_prompts_summary.py  test_runner_managers.py  test_runner_pi.py  test_runner_review.py  test_runner_thread_fixes.py  test_utils.py  test_wizard.py
tests/integration/: __init__.py  test_bridge_end_to_end.py
tests/test_backends/: __init__.py  test_pi_backend.py
