[project]
name = "fix-die-repeat"
version = "0.1.0"
description = "Automated check, review, and fix loop using pi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
fix-die-repeat = "fix_die_repeat.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["ALL"]
lint.ignore = ["COM812", "D203", "D213"]
extend-exclude = ["*.j2"]

[tool.ruff.lint.per-file-ignores]
"fix_die_repeat/cli.py" = [
    "BLE001",  # CLI entrypoint is an exception boundary; we catch all unexpected errors to show user-friendly messages instead of raw tracebacks. The alternative (not catching or re-raising) would result in poor UX with stack traces visible to end users.
]
"fix_die_repeat/runner.py" = [
    "TRY400",  # Intentional multi-line error logging for formatted output; traceback already captured via logger.exception().
]
"scripts/*.py" = [
    "T201",  # Scripts intentionally use print() for output to stdout/stderr; these are standalone executables, not library code.
]
"tests/*.py" = [
    "S101",  # Pytest idioms rely on assert statements; replacing them reduces failure introspection quality.
    "S603",  # Test subprocess calls use only trusted inputs (hardcoded literals and system-resolved paths from shutil.which), not untrusted user input.
    "SIM117",  # Nested with statements in tests make the mock context manager relationships clearer than combined with statements.
]

[tool.ruff.lint.isort]
known-first-party = ["fix_die_repeat"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=fix_die_repeat --cov-report=term-missing --cov-report=xml --cov-fail-under=80"